@@ -369,6 +369,20 @@ Util = exports || {};
     };
     
     /**
+     * log array of elements
+     * @param pArray
+     */
+    Util.logArray               = function(pArray) {
+        var i, n;
+        
+        if (pArray)
+            for (i = 0, n = pArray.length; i < n; i++)
+                Util.log( pArray[i] );
+        
+        return pArray;
+    };
+    
+    /**
      * function log pArg if it's not empty
      * @param pArg
      */
